[package]
name = "program"
version = "0.2.0"
authors = ["Nick Torres <nickrtorres@icloud.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/nickrtorres/program"
license = "Unlicense"
description = "Program: provide a rust analogue to C's perror"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
